NEW 245564
Thread safety analysis does not support run-time lock assertions
https://bugs.webkit.org/show_bug.cgi?id=245564
Summary Thread safety analysis does not support run-time lock assertions
Kimmo Kinnunen
Reported 2022-09-23 00:37:17 PDT
Thread safety analysis does not support run-time lock assertions Consider a rule like: - variable is read and written without lock from main thread until work queue is started - after work queue is started, the main thread writes are protected by a lock - work queue reads are protected by a lock Currently we only explain this with comments, if even that.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-23 00:38:11 PDT
Kimmo Kinnunen
Comment 2 2022-09-23 00:49:04 PDT
Note You need to log in before you can comment on or make changes to this bug.