Thread safety analysis does not support run-time lock assertions https://bugs.webkit.org/show_bug.cgi?id=245564 rdar://problem/100313162

Reviewed by NOBODY (OOPS!).

Currently sometimes code resorts to comments or non-explanation when
a variable is sometimes shared between two threads, but the access
pattern is not as simple as "only used in this thread".

Add WTF::LockAssertion that can be used to express run-time conditions
about when the particular variable is usable.

Uses thread safety analysis to establish that every access is sound
if the condition is sound.

Uses run-time ASSERTs to establish that the condition is sound.

This is exactly the same concept as with "assert that this thread
is current", with the same semantics and similar implementation.

Separates base implementaiton of the existing "is current" and
"lock" capabilities to their own header files.

* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/CapabilityIsCurrent.h: Added.
(WTF::WTF_ASSERTS_ACQUIRED_CAPABILITY):
* Source/WTF/wtf/CapabilityLock.h: Added.
(WTF::WTF_ASSERTS_ACQUIRED_CAPABILITY):
(WTF::WTF_ASSERTS_ACQUIRED_SHARED_CAPABILITY):
* Source/WTF/wtf/Lock.h:
(WTF::lockIsHeld<Lock>):
(WTF::WTF_ASSERTS_ACQUIRED_LOCK): Deleted.
* Source/WTF/wtf/LockAssertion.cpp: Added.
* Source/WTF/wtf/LockAssertion.h: Added.
(WTF::lockIsHeld<LockAssertion>):
(WTF::lockIsShared<LockAssertion>):
* Source/WTF/wtf/ThreadAssertions.h:
(WTF::isCurrent<ThreadAssertion>):
* Source/WTF/wtf/Threading.h:
(WTF::isCurrent<Thread>):
(WTF::WTF_ASSERTS_ACQUIRED_CAPABILITY): Deleted.
* Source/WTF/wtf/WorkQueue.h:
(WTF::WTF_ASSERTS_ACQUIRED_CAPABILITY): Deleted.
* Source/WTF/wtf/cocoa/WorkQueueCocoa.cpp:
(WTF::WorkQueueBase::platformInitialize):
(WTF::isCurrent<WorkQueue>):
(WTF::WorkQueue::assertIsCurrent const): Deleted.
* Source/WTF/wtf/generic/WorkQueueGeneric.cpp:
(WTF::isCurrent<WorkQueue>):
(WTF::WorkQueue::assertIsCurrent const): Deleted.
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WTF/LockAssertionTest.cpp: Added.
(TestWebKitAPI::TEST):